tests/single_instruction_translation_validation/mcsema/register-variants/lzcntl_r32_r32/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:172:22: error: use of undefined value '@my.ctlz.i32'
  %6 = tail call i32 @my.ctlz.i32(i32 %5, i1 false) #22
                     ^
0.01user 0.02system 0:00.03elapsed 107%CPU (0avgtext+0avgdata 27628maxresident)k
0inputs+16outputs (0major+3269minor)pagefaults 0swaps
